<resources>
    <string name="sharedactivitytransition_splashscreen_startupactivity">fsugyfshgfsdhvj</string>
    <string name="app_name">StudentsBed Alpha</string>
    <string name="city_list_item_street_name">Loading&#8230;</string>
    <string name="city_list_item_price"> </string>
    <string name="city_list_item_person_name"> </string>
    <string name="could_not_retrieve_place_photo">Could not retrieve photo for selected place</string>
    <string name="could_not_retrieve_loc">could not retrieve location</string>
    <string name="info_added_apartment">apartment info has been submitted, you are now a host</string>
    <string name="unknown_error_close_app">An unknown error has occurred. Please restart the application</string>
    <string name="title_activity_register_activty_screen1">unknown</string>
    <string name="title_activity_register_screen2">unknown</string>
    <string name="title_activity_register_screen3">unknown</string>
    <string name="title_activity_register_activty_screen4">unknown</string>
    <string name="title_activity_startup">unknown</string>
    <string name="title_activity_user_options">unknown</string>
    <string name="api_key_djjksdhoahberpow">AIzaSyBwToMZMHN70Y5aGesm7F62s0npHdhBd-s</string>
    <string name="image_not_retrieved">image could not be retrieved</string>
    <string name="delete_dialog">Delete images</string>
    <string name="image_file_not_retrieved">image file could not be retrieved</string>
    <string name="error_unknown_retrieve_image">Unknown error trying to retrieve image</string>
    <string name="unknown_string">UNKNOWN</string>
    <string name="unknown_error_occurred">unknown error occurred</string>
    <string name="yes_string">Yes</string>
    <string name="no_string">No</string>
    <string name="startup_text">app name</string>
    <string name="account_doesnt_exist">account doesn\'t exist</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="encoding_error">Password encoding error</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="automatic_log_in">remember e-mail</string>
    <string name="logged_out">logged out</string>
    <string name="could_not_create_user">Could not create user</string>
    <string name="save">save</string>
    <string name="register_activity_screen1_textView">…</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="register_screen2_textView">place of residence</string>
    <string name="take_picture">Take picture</string>
    <string name="gallery">Gallery</string>
    <string name="additional_information">Additional info</string>
    <string name="we_need_profile_picture">We need your best possible profile picture</string>
    <string name="user_password_non_existent">username or password doesn\'t exist</string>
    <string name="max_num_people">The maximum number of people allowed to stay per booking is 2</string>
    <string name="internet_connection_non_existent">No internet connection found</string>
    <string name="do_you_want_register_as_a_host">Do you want to register as a host?</string>
    <string name="email_username_exists">this e-mail already exists</string>
    <string name="platform_not_available_nonhosts">The platform isn\'t available yet for people who haven\'t registered themselves as hosts</string>
    <string name="looking_good">woah, you look handsome today</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="country_name_stock">Country</string>
    <string name="city_name_stock">City</string>
    <string name="time_to_shine">Time to shine</string>
    <string name="not_now">Not now</string>
    <string name="congratulations">Congratulations!</string>
    <string name="part_of_community">Your registration process is now completed, welcome to StudentsBed!</string>
    <string name="take_apartement_photo">We need an image for your listing</string>
    <string name="add_more_photos">You can add more images on the next screen</string>
    <string name="room_or_apartement">Your room or apartment</string>
    <string name="camera">camera</string>
    <string name="gallery_lowercase">gallery</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="add_image">Add pictures</string>
    <string name="price_limit">price per night has to be between $20 and $60</string>
    <string name="birthdate">select date of birth</string>
    <string name="birthdate2">date of birth</string>
    <string name="minimum_age">The required minimum age for users of StudentsBed is 18</string>
    <string name="city_village">City/Village</string>
    <string name="description">Description</string>
    <string name="price_per_night">Price per night</string>
    <string name="enable_location">You have to accept location permissions to make use of StudentsBed</string>
    <string name="no_place_selected">error selecting place</string>
    <string name="place_of_residence">select a city a village</string>
    <string name="maps_error">can\'t connect to Google Maps</string>
    <string name="no_internet_connection">No internet connection found</string>
    <string name="confirm">Confirm</string>
    <string name="profile_picture">profile picture</string>
    <string name="apartement_data">Apartment</string>
    <string name="images">images</string>
    <string name="street">Street</string>
    <string name="house_number">House number</string>
    <string name="title_text">Title</string>
    <string name="facebook_app_id">unknown</string>
    <string name="gender">gender</string>
    <string name="no_header_image">Please choose or take an header image</string>
    <string name="one_picture">Please add at least one picture</string>
    <string name="description_too_long">Listing description is too long</string>
    <string name="listing">Your listing</string>
    <string name="book_now">Book</string>
    <string name="select_street">select street</string>
    <string name="per_night">per night</string>
    <string name="arrival_date">Date of arrival</string>
    <string name="amount_of_people">Number of people</string>
    <string name="amount_of_nights">Number of nights</string>
    <string name="your_booking">Your booking</string>
    <string name="choose_date">Choose date</string>
    <string name="booked_dates">Unavailable data</string>
    <string name="select_add">Select the plus icon to replace your main photo</string>
    <string name="date_already_booked">Unfortunately you\'re too late! Someone has already made a booking on this date</string>
    <string name="no_street_selected">Error selecting street</string>
    <string name="change_password">Change password</string>
    <string name="delete_account">Delete account</string>
    <string name="replace_profile_image">Replace profile picture</string>
    <string name="add_apartement_details">Add apartment details</string>
    <string name="description_report_a_bug">Description</string>
    <string name="could_not_find_email"> We couldn\'t find an e-mail application on your device. If you want to send us an e-mail from a different device, you can send it to studentscouchnl@gmail.com (e-mail address has been copied to clipboard)</string>
    <string name="bug_in_app">Bug in StudentsBed app</string>
    <string name="description_too_long_2">Your description is too long. The maximum number of allowed characters is 200</string>
    <string name="read_ex_storage">The read external storage permission must be accepted in order to replace your image(s)</string>
    <string name="retrieving_data">Retrieving data &#8230;</string>
    <string name="email">E-mail</string>
    <string name="become_host">Become a host</string>
    <string name="personmessaging_introduction_guest1">Dit is het berichten scherm, je kan </string>
    <string name="personmessaging_introduction_guest2">berichten sturen tot </string>
    <string name="personmessaging_introduction_guest3"> je toestemming geeft om een boeking to doen voor </string>
    <string name="personmessaging_introduction_guest4"> apartement. Stel jezelf voor, wees vriendelijk en vraag of de data die je wilt boeken beschikbaar zijn</string>
    <string name="personmessaging_introduction_host1">Dit is het berichtenscherm, je kan </string>
    <string name="street_not_in_city_village">de straat die hebt geselecteert matcht niet met de stad/dorp die je gekozen hebt</string>
    <string name="personmessaging_introduction_host2"> berichten en toestemming geven voor het maken van een boeking door bovenaan op \'geef toestemming\' te drukken. Stel jezelf voor, wees vriendelijk en bespreek welke data beschikbaar zijn voor een boeking.</string>
    <string name="log_out">Log out</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes_dialog">Yes</string>
    <string name="no_dialog">No</string>
    <string name="email_or_password_not_filled_in">e-mail or password not entered in</string>
    <string name="wrong_email_password">e-mail or password is incorrect</string>
    <string name="user_not_found">User not found. Perhaps you made a spelling error in the e-mail box?</string>
    <string name="city_changed">city/village might have changed</string>
    <string name="street_name_reset">street name has been reset</string>
    <string name="logged_in">Welcome!</string>
    <string name="data_could_not_be_send">Data could not be send to our servers, please try again later</string>
    <string name="registration_complete">Registration complete</string>
    <string name="registration_complete1">Thank you for registering. We need some more users before the platform can be unlocked on _Date_ and _time_. \n\n If you know of any people that you\'d see using StudentsBed, please let them know we exist, either through WhatsApp, e-mail, smoke signals or by sending them the link that has been copied to your clipboard</string>
    <string name="booking_country_not_available">apartment hosting is currently restricted to the borders of The Netherlands and Belgium</string>
    <string name="you_need_to_be_online">You need an active internet connection to use StudentsBed</string>
    <string name="log_in_unavailable">The StudentsBed platform isn\'t unlocked yet, so log-in is currently unavailable</string>
    <string name="email_invalid">e-mail address doesn\'t exist</string>
    <string name="hosting_unavailable">You can currently only host apartments that are located inside The United States. We\'ll let you know when hosting becomes available</string>
    <string name="saving_image">Saving image&#8230;</string>
    <string name="preparing_card">Preparing card&#8230;</string>
    <string name="no_storage_card">No storage card found</string>
    <string name="not_enough_space">Not enough storage space</string>
    <string name="somethig_went_wrong_file_not_found">Something went wrong</string>
    <string name="ratings">ratings</string>
    <string name="ok">Okay</string>
    <string name="warning_received1">According to one of your former hosts you did not behave appropriately during one of your stays, for this reason you have received a warning. You now have </string>
    <string name="warning_received2"> warnings in total. At 3 warnings your account will be blocked for 6 months.</string>
    <string name="loading">Loading&#8230;</string>
    <string name="num_days_left">Number of subletting nights left for this year</string>
    <string name="feedback">Thank you for your feedback!</string>
    <string name="proceed2">proceed</string>
    <string name="understood">understood</string>
    <string name="found_a_bug">Found a bug? Send us an e-mail describing the problem and we\'ll take a look at it</string>
    <string name="go_to_maps">Go to Google Maps</string>
    <string name="send_an_email">send an e-mail</string>
</resources>